--- a/vanilla/manifest.json
+++ b/vanilla/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Estension Vite",
+    "name": "Estension de Chrome",
     "version": "1.0",
-    "description": "Extensión de chrome desarrollada con vite.",
+    "description": "Esta es mi primera extension de chrome",
     "icons": {
         "128": "logo.png"
     },
