--- a/vite/public/manifest.json
+++ b/vite/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "Estension Vite",
+    "name": "Extensión Vite",
     "version": "1.0",
     "description": "Extensión de chrome desarrollada con vite.",
     "icons": {
